--- a/CollectorQi/Views/Armazenagem/ESCL027/GuardaMateriasDepositoLocalizPopUp.xaml
+++ b/CollectorQi/Views/Armazenagem/ESCL027/GuardaMateriasDepositoLocalizPopUp.xaml
@@ -3,7 +3,7 @@
                  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                  xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
                  xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
-                 x:Class="CollectorQi.Views.GuardaMateriasDepositoLocalizPopUp" 
+                 x:Class="CollectorQi.Views.ConsultaLocalizacaoLocalizPopUp" 
                  xmlns:sys="clr-namespace:System;assembly=mscorlib"
                  xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
                  xmlns:local="clr-namespace:CollectorQi;assembly=CollectorQi">
@@ -32,7 +32,7 @@
                                 </Grid.RowDefinitions>
                                 <Label x:Name="lblLocalizacao" Text="Localização" FontSize="Medium" TextColor="{StaticResource NavigationPrimary}" VerticalOptions="Center" HorizontalTextAlignment="Start" Grid.Row="0" Grid.Column="0" />
                                 
-                                <local:CustomEntryText x:Name="edtLocalizacao" IsReadOnly="false" FontSize="Small" MinimumWidthRequest="150" VerticalOptions="Center" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Digite a localização..." Grid.Row="1"
+                                <local:CustomEntryText x:Name="edtLocalizacao" IsReadOnly="false" FontSize="Small" MinimumWidthRequest="150" VerticalOptions="Center" HorizontalOptions="Fill" Keyboard="Plain" Placeholder="Digite a localização..." Grid.Row="1" TextChanged="edtLocalizacao_TextChanged"
                                     Grid.Column="0" />
 
                                 <StackLayout Orientation="Horizontal" Margin="10,0,10,0" Grid.Row="3">
