--- a/CollectorQi/Views/Inventario/ESCL018B/InventarioCaixaIncompletaPopUpB.xaml
+++ b/CollectorQi/Views/Inventario/ESCL018B/InventarioCaixaIncompletaPopUpB.xaml
@@ -17,10 +17,11 @@
                 <Grid.RowDefinitions>
                     
                     <RowDefinition Height="*" />
-                    <RowDefinition Height="130" />
+                    <RowDefinition Height="180" />
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0" Margin="5,0,5,0" HorizontalOptions="Fill" VerticalOptions="Fill">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -91,9 +92,9 @@
                                     <RowDefinition Height="40" />
                                 </Grid.RowDefinitions>
 
-                                <Label x:Name="lblCodigoBarras" Text="Codigo de Barras" FontSize="Medium" TextColor="{StaticResource NavigationPrimary}" VerticalOptions="Center" HorizontalTextAlignment="Start" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" />
+                                <Label x:Name="lblCodigoBarras" Text="Codigo de Barras (CX)" FontSize="Medium" TextColor="{StaticResource NavigationPrimary}" VerticalOptions="Center" HorizontalTextAlignment="Start" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" />
 
-                                <local:CustomEntryText x:Name="edtCodigoBarras" IsReadOnly="false" FontSize="Small" MaxLength="300" WidthRequest="300" Keyboard="Default" Placeholder="Codigo de Barras"  VerticalOptions="Center" Unfocused="edtCodigoBarras_UnFocused"
+                                <local:CustomEntryText x:Name="edtCodigoBarras" IsReadOnly="false" FontSize="Small" MaxLength="300" WidthRequest="300" Keyboard="Default" Placeholder="Codigo de Barras (CX)"  VerticalOptions="Center" Unfocused="edtCodigoBarras_UnFocused" TextChanged="edtCodigoBarras_TextChanged"
                                         HorizontalOptions="Fill" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" />
 
 
@@ -103,6 +104,29 @@
 
                     <StackLayout Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="5">
                         <Frame VerticalOptions="StartAndExpand" HasShadow="true" Margin="10,4,10,0" CornerRadius="5" x:Name="frame4" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="40" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Label x:Name="lblQtdAcumulada" Text="Quantidade Acumulada" FontSize="Medium" TextColor="{StaticResource NavigationPrimary}" VerticalOptions="Center" HorizontalTextAlignment="Start" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" />
+
+                                <!-- Correção BUG Android (Samsung Não pega "," e "." no teclado númerico) -->
+
+                                <local:CustomEntry IsNumeric="True" x:Name="txtQuantidadeAcumulada" FontSize="Small" MaxLength="300" WidthRequest="300" Placeholder="Quantidade Acumulada..." VerticalOptions="Fill" HorizontalOptions="StartAndExpand"
+                                                    Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="1" IsReadOnly="True"/>
+
+                            </Grid>
+                        </Frame>
+                    </StackLayout>
+                    
+                    <StackLayout Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="5">
+                        <Frame VerticalOptions="StartAndExpand" HasShadow="true" Margin="10,4,10,0" CornerRadius="5" x:Name="frame5" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
@@ -132,34 +156,40 @@
                     
                 </Grid>
                 
-                 <Grid Margin="10,5,10,5" Grid.Row="1"  VerticalOptions="End" HorizontalOptions="FillAndExpand" >
+               <Grid Margin="10,5,10,5" Grid.Row="1"  VerticalOptions="End" HorizontalOptions="FillAndExpand" >
                 
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
 
-                 </Grid.RowDefinitions>
-                    <Button x:Name="BtnEfetivar" 
-                            FontSize="Medium" 
-                            VerticalOptions="FillAndExpand" 
-                            HorizontalOptions="FillAndExpand" 
-                            Image="efetivarMini.png" 
-                            BackgroundColor="{StaticResource NavigationPrimary}" 
-                            TextColor="White" 
-                            BorderRadius="16"
-                            Clicked="OnClick_Efetivar" 
-                            Grid.Row="0" 
-                            Grid.Column="0" 
-                            Text="Confirmar" />
-                    <!--<Button x:Name="BtnCancelar"  FontSize="Medium" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="closeMini.png" BackgroundColor="#ff9999" TextColor="White" BorderRadius="16"
-                        Clicked="OnClick_Cancelar" Grid.Row="1" Text="Cancelar (digitação inventário)" />-->
+                    </Grid.RowDefinitions>
+                     
+                        <Button x:Name="BtnEfetivar" 
+                                FontSize="Medium" 
+                                VerticalOptions="FillAndExpand" 
+                                HorizontalOptions="FillAndExpand" 
+                                Image="efetivarMini.png" 
+                                BackgroundColor="{StaticResource NavigationPrimary}" 
+                                TextColor="White" 
+                                BorderRadius="16"
+                                Clicked="OnClick_Efetivar" 
+                                Grid.Row="0" 
+                                Grid.Column="0" 
+                                Text="Confirmar" />
 
-                    <Button x:Name="BtnLimpar"  FontSize="Medium" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="closeMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  TextColor="White" BorderRadius="16"
-                        Clicked="BtnLimpar_Clicked" Grid.Row="1" Text="Limpar" />
+                   <!--
 
+                        <Button x:Name="BtnConfirmar"  FontSize="Medium" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="closeMini.png" BackgroundColor="#ff9999" TextColor="White" BorderRadius="16"
+                            Clicked="OnClick_Efetivar" Grid.Row="1" Text="Finalizar Conferência Item" />
+                   -->
 
-                </Grid>
+                   
+                        <Button x:Name="BtnLimpar"  FontSize="Medium" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Image="closeMini.png" BackgroundColor="{StaticResource NavigationPrimary}"  TextColor="White" BorderRadius="16"
+                            Clicked="BtnLimpar_Clicked" Grid.Row="2" Text="Limpar" />
+                  
+
+               </Grid>
             </Grid>
         </ScrollView>
     </StackLayout>
