--- a/CollectorQi/Views/Recebimento/ESCL028/NotaFiscalConferenciaReparosListaPage.xaml
+++ b/CollectorQi/Views/Recebimento/ESCL028/NotaFiscalConferenciaReparosListaPage.xaml
@@ -3,7 +3,7 @@
     <ContentPage.Content>
         <!--<StackLayout BackgroundColor="#4E4E4E">-->
         <StackLayout BackgroundColor="#fff">
-            <Frame  HasShadow="true" Margin="10,10,10,10" CornerRadius="5" x:Name="frame" OutlineColor="#A5C3FA" BackgroundColor="#b4b4b1" >
+          <!--  <Frame  HasShadow="true" Margin="10,10,10,10" CornerRadius="5" x:Name="frame" OutlineColor="#A5C3FA" BackgroundColor="#b4b4b1" >
                 <Grid HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -11,6 +11,21 @@
           
                     <Label x:Name="lblCodEstabel"  VerticalOptions="Start" HorizontalOptions="Start" Font="Small" FontAttributes="Bold"  />
                 </Grid>
+            </Frame> -->
+
+            <Frame HorizontalOptions="FillAndExpand" HasShadow="true" Margin="12,2,12,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB" HeightRequest="30">
+
+                <SearchBar IsVisible="{Binding SearchMode}" 
+                               Placeholder="Código de barras para leitura..." 
+                               Text="{Binding SearchText}" 
+                               x:Name="SearchBarItCodigo" 
+                               TextChanged="Handle_TextChanged" 
+                               VerticalOptions="StartAndExpand"
+                               HorizontalOptions="StartAndExpand"
+                               Margin="0,0,0,0"
+                               FontSize="Small"
+                           Unfocused="SearchBarItCodigo_Unfocused" SearchButtonPressed="SearchBarItCodigo_SearchButtonPressed"
+                                />
             </Frame>
 
             <CollectionView x:Name="cvNotaFiscal" ItemsSource="{Binding ObsNotaFiscal}" SelectionMode="Single" Margin="10,0,10,0" SelectionChanged="OnCollectionViewSelectionChanged">
@@ -28,16 +43,33 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
-                              <!--      <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+
+                                        <RowDefinition Height="Auto" />
+                                        <!--      <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" /> -->
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="80"/>
-                                </Grid.ColumnDefinitions>                                
-                                
-                                <Grid Grid.Row="0" HorizontalOptions="FillAndExpand">
+                                </Grid.ColumnDefinitions>
+
+                                <Grid Grid.Row="0" HorizontalOptions="FillAndExpand" >
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+                                    <Label Grid.Row="0" Grid.Column="0" Text="Filial: " FontAttributes="Bold" FontSize="Small" />
+                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodFilial}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" FontSize="Small" />
+                                </Grid>
+
+                                    
+                                <Grid Grid.Row="1" HorizontalOptions="FillAndExpand">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="*" />
                                     </Grid.RowDefinitions>
@@ -63,7 +95,7 @@
                                 </Grid>
 
 
-                                <Grid Grid.Row="1" HorizontalOptions="FillAndExpand" >
+                                <Grid Grid.Row="2" HorizontalOptions="FillAndExpand" >
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="*" />
                                     </Grid.RowDefinitions>
@@ -75,6 +107,22 @@
                                     <Label Grid.Row="0" Grid.Column="0" Text="Num RR: " FontAttributes="Bold" FontSize="Small" />
                                     <Label Grid.Row="0" Grid.Column="1" Text="{Binding NumRR}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" FontSize="Small" />
                                 </Grid>
+
+                                    
+                                <Grid Grid.Row="3" HorizontalOptions="FillAndExpand" >
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+                                    <Label Grid.Row="0" Grid.Column="0" Text="Nro Docto: " FontAttributes="Bold" FontSize="Small" />
+                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding NroDocto}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" FontSize="Small" />
+                                </Grid>
+                                
+
 
                                     <!--
                                 <Grid Grid.Row="1" HorizontalOptions="FillAndExpand">
@@ -181,20 +229,23 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
+              <!--  <RowDefinition Height="Auto"/> -->
                 </Grid.RowDefinitions>
 
+                <!--
                 <Button x:Name="BtnScan" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="cameraMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
                           Clicked="BtnScan_Clicked" Grid.Row="0" Grid.Column="0" Text="Buscar Etiqueta" TextColor="White" />
+                
+                -->
            <!--     <Button x:Name="BtnAtualizarNotaFiscal" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
                           Clicked="BtnAtualizarNotaFiscal_Clicked" Grid.Row="1" Grid.Column="0" Text="Atualizar Nota Fiscal" TextColor="White" />
                 -->
 
                 <Button x:Name="BtnFinalizaConferencia" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="efetivarMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
-                          Clicked="BtnFinalizaConferencia_Clicked" Grid.Row="1" Grid.Column="0" Text="Finaliza Conferência" TextColor="White" />
+                          Clicked="BtnFinalizaConferencia_Clicked" Grid.Row="0" Grid.Column="0" Text="Finaliza Conferência" TextColor="White" />
 
                 <Button x:Name="BtnCarregaNotaFiscal" FontSize="Small"  MinimumHeightRequest="50" VerticalOptions="Start" HorizontalOptions="FillAndExpand" Image="zoomMini.png" BackgroundColor="{StaticResource NavigationPrimary}" BorderRadius="16"
-                          Clicked="OnClick_CarregaNotaFiscal" Grid.Row="2" Grid.Column="0" Text="Carrega Nota Fiscal em andamento" TextColor="White" />
+                          Clicked="OnClick_CarregaNotaFiscal" Grid.Row="1" Grid.Column="0" Text="Carrega Nota Fiscal em andamento" TextColor="White" />
                
             </Grid>            
             
