Alterações: ESCL018/ESCL018B/ESCL027/ESCL034
-ESCL018/ESCL018B aceitar quantidade decimal no inventario.
-ESCL027 solicitar o número de série para o reparo.
-ESCL034 não permitir a leitura do mesmo Item X Serie na mesma sessao.

--- a/CollectorQi/Views/Inventario/ESCL018/InventarioCaixaIncompletaPopUp.xaml
+++ b/CollectorQi/Views/Inventario/ESCL018/InventarioCaixaIncompletaPopUp.xaml
@@ -6,7 +6,7 @@
                  x:Class="CollectorQi.Views.InventarioCaixaIncompletaPopUp" 
                  xmlns:sys="clr-namespace:System;assembly=mscorlib"
                  xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
-                 xmlns:local="clr-namespace:CollectorQi;assembly=CollectorQi">
+                 xmlns:local="clr-namespace:CollectorQi;assembly=CollectorQi" xmlns:resources="clr-namespace:CollectorQi.Resources">
     <pages:PopupPage.Animation>
         <animations:ScaleAnimation PositionIn="Bottom" PositionOut="Center" ScaleIn="1" ScaleOut="0.7" DurationIn="700" EasingIn="BounceOut" />
     </pages:PopupPage.Animation>
@@ -96,7 +96,7 @@
                                 <local:CustomEntryText x:Name="edtCodigoBarras" IsReadOnly="false" FontSize="Small" MaxLength="300" WidthRequest="300" Keyboard="Default" Placeholder="Codigo de Barras"  VerticalOptions="Center" Unfocused="edtCodigoBarras_UnFocused"
                                         HorizontalOptions="Fill" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" />
 
-
+                              
                             </Grid>
                         </Frame>
                     </StackLayout>
@@ -117,8 +117,11 @@
 
                               <!-- Correção BUG Android (Samsung Não pega "," e "." no teclado númerico) -->
                     
-                                <local:CustomEntry IsNumeric="True" x:Name="txtQuantidade" FontSize="Small" MaxLength="300" WidthRequest="300" Placeholder="Quantidade inventário..." VerticalOptions="Fill" HorizontalOptions="StartAndExpand"
-                                                    Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="1" />
+                                <!--local:CustomEntry IsNumeric="True" x:Name="txtQuantidade" FontSize="Small" MaxLength="300" WidthRequest="300" Placeholder="Quantidade inventário..." VerticalOptions="Fill" HorizontalOptions="StartAndExpand"
+                                                    Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="1" /-->
+
+                                <local:CustomEntryNumeric x:Name="txtQuantidade" FontSize="Small" MaxLength="300" WidthRequest="300" Placeholder="Quantidade inventário..." VerticalOptions="Fill" HorizontalOptions="StartAndExpand"
+                                                    Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="1" AllowFraction="True" AllowNegative="True" />
 
                                 <StackLayout Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="1" HorizontalOptions="CenterAndExpand">
                                     <Button CornerRadius="80" Text="+1"   Clicked="BtnQuantidadeSum1_Clicked"  BackgroundColor="{StaticResource NavigationPrimary}" TextColor="White" ></Button>
