--- a/CollectorQi/Views/Armazenagem/ESCL034/GerarPedidoListaPage.xaml
+++ b/CollectorQi/Views/Armazenagem/ESCL034/GerarPedidoListaPage.xaml
@@ -25,22 +25,53 @@
             -->
 
 
-            <StackLayout Spacing="1" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                <Frame HorizontalOptions="FillAndExpand" HasShadow="true" Margin="12,2,12,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB" HeightRequest="30">
-
+            <StackLayout IsVisible="True" x:Name="stackLayoutReparo" Spacing="1" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                <Frame HorizontalOptions="FillAndExpand" HasShadow="true" Margin="12,10,12,2" CornerRadius="5" x:Name="frame2" BorderColor="#A5C3FA"  HeightRequest="30">
+                    <!--BackgroundColor="#DCDCDB"-->
+                    <!-- Unfocused="SearchReparo_Unfocused" -->
                     <SearchBar IsVisible="{Binding SearchMode}" 
                                Placeholder="Código Barras Reparo.." 
                                Text="{Binding SearchText}" 
                                x:Name="SearchReparo" 
-                               TextChanged="Handle_TextChanged" 
+                               TextChanged="SearchReparo_TextChanged"
                                VerticalOptions="StartAndExpand"
                                HorizontalOptions="StartAndExpand"
                                Margin="0,0,0,0"
                                FontSize="Small"/>
                 </Frame>
+                
             </StackLayout>
 
-            <CollectionView x:Name="cvReparo" ItemsSource="{Binding Items}" SelectionChanged="cvReparo_SelectionChanged" SelectionMode="Single" Margin="10,0,10,0">
+            <StackLayout IsVisible="True" x:Name="stackLayoutSerie" VerticalOptions="Start" Orientation="Vertical">
+                <Label x:Name="lblReparo" HorizontalOptions="Center" FontAttributes="Bold" TextColor="Red" Margin="0,20,0,0" FontSize="Medium"/>
+                <Label x:Name="lblSerie" Text="Realize leitura do Número da Série" HorizontalOptions="Center" TextColor="Red"/>
+                <Frame HorizontalOptions="FillAndExpand" HasShadow="true" Margin="12,10,12,2" CornerRadius="5" x:Name="frame3" BorderColor="Red"  HeightRequest="110">
+
+                    <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+
+                        <SearchBar IsVisible="True"  Grid.Row="0"
+                                   Placeholder="Código Barras Série.." 
+                                   x:Name="SearchSerie" 
+                                   TextChanged="SearchSerie_TextChanged"
+                                   HorizontalOptions="StartAndExpand"
+                                   Margin="0,0,0,10"
+                                   FontSize="Small"/>
+
+                        <Button  x:Name="BtnSairSerie" FontSize="Small"  MinimumHeightRequest="50"  HorizontalOptions="FillAndExpand" Image="closeMini.png" BackgroundColor="PaleVioletRed"  BorderRadius="16" 
+                                 Clicked="BtnSairSerie_Clicked" Grid.Row="1" Text="Cancelar Leitura" TextColor="White" />
+                    </Grid>
+                </Frame>
+            </StackLayout>
+
+            <StackLayout Spacing="1" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+               
+            </StackLayout>
+
+            <CollectionView x:Name="cvReparo" ItemsSource="{Binding Items}" SelectionChanged="cvReparo_SelectionChanged" SelectionMode="Single" Margin="10,0,10,0" >
                 <CollectionView.EmptyView>
                     <StackLayout>
                         <Label Text="Nenhuma Reparo Informado" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" TextColor="Silver" />
@@ -51,7 +82,7 @@
                         <StackLayout Spacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                             <Frame VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" HasShadow="true" Margin="10,10,10,2" CornerRadius="5" x:Name="frame2" OutlineColor="#A5C3FA" BackgroundColor="#DCDCDB" Padding="0">
 
-                                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="10,12,10,0">
+                                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="10,12,2,0">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
                                         <RowDefinition Height="Auto" />
@@ -59,8 +90,8 @@
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="80"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        
                                     </Grid.ColumnDefinitions>
 
                                     <Grid Grid.Row="0" HorizontalOptions="FillAndExpand" >
@@ -72,8 +103,8 @@
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="Auto" />
                                         </Grid.ColumnDefinitions>
-                                        <Label Grid.Row="0" Grid.Column="0" Text="Filial: " FontAttributes="Bold" FontSize="Small" />
-                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodFilial}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" FontSize="Small" />
+                                        <Label Grid.Row="0" Grid.Column="0" Text="Filial: "  FontSize="Small" />
+                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodFilial}" FontAttributes="Bold" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" FontSize="Small" />
                                     </Grid>
 
 
@@ -86,8 +117,8 @@
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="Auto" />
                                         </Grid.ColumnDefinitions>
-                                        <Label Grid.Row="0" Grid.Column="0" Text="Item: " FontAttributes="Bold" FontSize="Small" />
-                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodProduto}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" FontSize="Small" />
+                                        <Label Grid.Row="0" Grid.Column="0" Text="Item: "  FontSize="Small" />
+                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding CodProduto}"  FontAttributes="Bold" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" FontSize="Small" />
                                     </Grid>
 
                                     <Grid Grid.Row="2" HorizontalOptions="FillAndExpand" >
@@ -98,9 +129,14 @@
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="Auto" />
+                                            
                                         </Grid.ColumnDefinitions>
-                                        <Label Grid.Row="0" Grid.Column="0" Text="Num RR: " FontAttributes="Bold" FontSize="Small" />
-                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding NumRR}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" FontSize="Small" />
+                                        <Label Grid.Row="0" Grid.Column="0" Text="Num RR: "  FontSize="Small" />
+                                        <Label Grid.Row="0" Grid.Column="1" Text="{Binding NumRR}" FontAttributes="Bold" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" FontSize="Small" />
+                                        <Label Grid.Row="0" Grid.Column="2" Text="Série: "  FontSize="Small" Margin="10,0,0,0"/>
+                                        <Label Grid.Row="0" Grid.Column="3" Text="{Binding Serie}" FontAttributes="Bold" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" FontSize="Small" />
+
                                     </Grid>
                                 </Grid>
                             </Frame>
